implement get, getLeftmostLeaf of LeafNode, InnerNode and BPlusTree